--- a/VisionaryPortfolio/vercel.json
+++ b/VisionaryPortfolio/vercel.json
@@ -1,15 +1,11 @@
 {
+  "version": 2,
   "builds": [
-    {
-      "src": "vite.config.js",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
-    }
+    { "src": "server/index.ts", "use": "@vercel/node" },
+    { "src": "./vite.config.ts", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    { "src": "/api/(.*)", "dest": "server/index.ts" },
+    { "src": "/(.*)", "dest": "/dist/$1" }
   ]
 }
