--- a/VisionaryPortfolio/package.json
+++ b/VisionaryPortfolio/package.json
@@ -1,12 +1,18 @@
 {
   "name": "rest-express",
   "version": "1.0.0",
+   "engines": {
+    "node": "22.x"
+  },
   "type": "module",
   "license": "MIT",
   "scripts": {
-  "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outfile=dist/index.js",
-  "start": "node dist/index.js"
-},
+    "dev": "NODE_ENV=development tsx server/index.ts",
+    "build": "vite build",
+    "start": "NODE_ENV=production node dist/index.js",
+    "check": "tsc",
+    "db:push": "drizzle-kit push"
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
